# FRAL

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conda.yml  darwin.sh  grpc.sh  pyREADME.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
_fral/: CMakeLists.txt
_fral/demo/: CMakeLists.txt  cpp_runner.cpp  py_runner.py  test.py
_fral/engine/: engine.cpp  engine.h
_fral/examples/: basic.cpp  basic.py
_fral/network/: client.cpp  client.h  server.cpp  server.h
_fral/python/: CMakeLists.txt
_fral/python/fral/: __init__.py  fral.py  fral_ext.cpp
_fral/testing/: CMakeLists.txt
_fral/testing/performance/: client.cpp  fral_comp.cpp  main.py  server.cpp  utility.h  write_test.cpp
_fral/testing/unit/: test_engine.cpp  test_fral.py
etc/: vm-setup.sh
fral/: CMakeLists.txt
fral/demo/: cpp_runner.cpp  py_runner.py
fral/engine/: CMakeLists.txt  engine.cpp  engine.h  engine2.cpp  engine2.h
fral/examples/: CMakeLists.txt  basic.cpp
fral/network/: CMakeLists.txt  client.cpp  client.h  medium.grpc.pb.cc  medium.grpc.pb.h  medium.pb.cc  medium.pb.h  medium.proto  server.cpp  server.h
fral/python/: CMakeLists.txt  fral_ext.cpp
fral/python/fral/: fral.py
fral/testing/: CMakeLists.txt
fral/testing/performance/: CMakeLists.txt  __init__.py  append_test.py  build.sh  engine_sqlite.h  main.py  net_test.py  pc_test.cpp  pc_test.py  pc_test_sqlite.cpp  py_test.py  utility.h  write_test.cpp  write_test.py  write_test_sqlite.cpp
fral/testing/performance_tests/: CMakeLists.txt  __init__.py  build.sh  client.cpp  client.py  main.py  net_test.py  pc_test.cpp  pc_test.py  py_test.py  python_tests.py  server.cpp  server.py  test_client.h  test_server.h  utility.h  vm_client.py  write_test.cpp  write_test.py
fral/testing/performance_tests/notebooks/: net_test.ipynb  pc_test.ipynb  write_test.ipynb
fral/testing/unit/: test_engine.cpp  test_fral.py
fral/testing/unit_tests/: CMakeLists.txt  test_engine.cpp  test_fral.py
